# mylite-mariadb

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md
.agents/skills/mylite-dont-stop/: SKILL.md
.agents/skills/mylite-implement-slice/: SKILL.md
.agents/skills/mylite-review-slice/: SKILL.md
.agents/skills/mylite-start-slice/: SKILL.md
.agents/skills/mylite-upstream-work/: SKILL.md
.agents/skills/mylite-work-hard/: SKILL.md
.github/workflows/: ci.yml
cmake/: MyLiteCompilerOptions.cmake  MyLiteDeveloperTools.cmake  MyLiteMariaDB.cmake  MyLitePHP.cmake  check-mariadb-embedded-freshness.cmake  mariadb-embedded-baseline.cmake  mariadb-mtr-smoke.cmake  mariadb-mtr-storage-smoke.cmake
docs/: COMPATIBILITY.md  ROADMAP.md
docs/api/: libmylite-c-api.md  php-extensions.md
docs/architecture/: bundle-size-research.md  compatibility-harness.md  engineering-standards.md  mariadb-embedded-build.md  mariadb-foundation.md  monorepo.md  pre-implementation-checklist.md  single-file-storage.md  storage.md
docs/research/: production-size-analysis.md
docs/specs/: README.md
docs/specs/active-append-write-buffer/: specs.md
docs/specs/active-branch-cache-hit-probe/: specs.md
docs/specs/active-branch-leaf-page-cache/: specs.md
docs/specs/active-branch-packed-row-insert/: specs.md
docs/specs/active-branch-page-cache/: specs.md
docs/specs/active-branch-refold-entryset-cache/: specs.md
docs/specs/active-cache-lookup-short-circuits/: specs.md
docs/specs/active-cache-table-entry-scope/: specs.md
docs/specs/active-catalog-root-cache/: specs.md
docs/specs/active-checkpoint-write-amortization/: specs.md
docs/specs/active-dirty-page-rollback/: specs.md
docs/specs/active-exact-cache-same-row-key-replace/: specs.md
docs/specs/active-exact-index-append-overlay/: specs.md
docs/specs/active-exact-index-cache-after-mutation/: specs.md
docs/specs/active-exact-index-cache-maintenance/: specs.md
docs/specs/active-exact-index-cache-promotion/: specs.md
docs/specs/active-header-publication-fast-path/: specs.md
docs/specs/active-header-read-fast-path/: specs.md
docs/specs/active-index-leaf-page-cache-capacity/: specs.md
docs/specs/active-index-page-cache-buckets/: specs.md
docs/specs/active-index-page-cache-fast-miss-recycle/: specs.md
docs/specs/active-index-page-cache-metadata-store/: specs.md
docs/specs/active-index-page-cache-single-probe-store/: specs.md
docs/specs/active-index-root-entry-cache/: specs.md
docs/specs/active-indexed-packed-row-append/: specs.md
docs/specs/active-indexed-row-lookup-scope/: specs.md
docs/specs/active-indexed-row-payload-fast-copy/: specs.md
docs/specs/active-indexed-row-statement-header-fast-path/: specs.md
docs/specs/active-leaf-cache-metadata-probe/: specs.md
docs/specs/active-live-row-cache-buckets/: specs.md
docs/specs/active-live-row-id-cache-absence/: specs.md
docs/specs/active-live-row-list-maintenance/: specs.md
docs/specs/active-maintained-root-packed-row-append/: specs.md
docs/specs/active-maintained-update-no-plan-cache/: specs.md
docs/specs/active-packed-row-append/: specs.md
docs/specs/active-payload-validation-cache-threading/: specs.md
docs/specs/active-payload-validation-proof/: specs.md
docs/specs/active-rewrite-header-publish-skip/: specs.md
docs/specs/active-rewrite-range-ref/: specs.md
mariadb/: CMakeLists.txt  config.h.cmake  configure.cmake
mariadb/cmake/: mariadb_connector_c.cmake  pcre.cmake  zlib.cmake
mariadb/include/: m_ctype.h  my_global.h  my_stacktrace.h  mylite_ownerless_file_lock_policy.h  mylite_zlib_disabled.h
mariadb/libmysqld/: CMakeLists.txt  emb_qcache.cc  lib_sql.cc  mylite_event_parse_data_disabled.cc  mylite_help_command_stub.cc  mylite_log_event_core_stub.cc  mylite_log_event_server_disabled.cc  mylite_procedure_analyse_stub.cc  mylite_rpl_gtid_disabled.cc  mylite_select_procedure_stub.cc  mylite_stored_program_runtime_stub.cc
mariadb/mysql-test/: mariadb-test-run.pl
mariadb/mysys/: CMakeLists.txt  charset.c  crc32ieee.cc  mylite_dynamic_columns_disabled.c  mylite_ma_dyncol_disabled.c  thr_timer.c
mariadb/sql/: CMakeLists.txt  ddl_log.cc  derror.cc  field.cc  handler.cc  handler.h  item_cmpfunc.cc  item_cmpfunc.h  item_create.cc  item_create.h  item_func.cc  item_func.h  item_jsonfunc.cc  item_jsonfunc.h  item_strfunc.cc  item_strfunc.h  item_sum.cc  log.cc  log.h  log_cache.cc  log_event.cc  mdl.cc  mdl.h  mylite_backup_disabled.cc  mylite_event_parse_data_disabled.cc  mylite_field_comp_disabled.cc  mylite_gis_sql_functions_disabled.cc  mylite_gtid_index_disabled.cc  mylite_json_table_disabled.cc  mylite_log_event_server_disabled.cc  mylite_opt_trace_disabled.cc  mylite_oracle_parser_disabled.cc  mylite_oracle_parser_stub.cc  mylite_ownerless_mdl_hooks.cc  mylite_ownerless_mdl_hooks.h  mylite_ownerless_runtime_hooks.cc  mylite_ownerless_runtime_hooks.h  mylite_proxy_protocol_disabled.cc  mylite_query_cache_disabled.cc  mylite_rpl_filter_disabled.cc  (+44 more)
mariadb/sql-common/: client.c
mariadb/strings/: ctype-uca1400.c  ctype-uca1400.h
mariadb/vio/: CMakeLists.txt  mylite_viossl_disabled.c  vio.c  viosocket.c
tests/: CMakeLists.txt
tools/: CMakeLists.txt  audit-mylite-bundle.sh  build-mariadb-minsize.sh  mariadb-embedded-build  mylite-bundle-audit  mylite-compat-harness  mylite-mtr-harness  mylite-perf-baseline  mylite-size-report  mylite_perf_baseline.c  mylite_storage_init.c  ownerless-active-reader-pressure-trace  ownerless-checksum-stress-trace  ownerless-ddl-lifecycle-trace  ownerless-ddl-stress-trace  ownerless-external-mariadb-trace-smoke  ownerless-fk-graph-trace  ownerless-independent-table-stress-trace  ownerless-random-tx-trace  ownerless-sql-trace-runner  ownerless-sql-trace-suite  ownerless-temporary-table-stress-trace  ownerless-transaction-stress-trace  run-compatibility-test-harness.sh  run-embedded-bootstrap-smoke.sh  run-libmylite-open-close-smoke.sh  run-storage-engine-smoke.sh  wordpress-phpunit-mysqli-mylite
tools/docker/mariadb-minsize/: Dockerfile
(+1547 files in other folders)
